Creates "three random recipes", import our openapi from assignment 3.1
