# routes/recipes.js
@@ -6,6 +6,18 @@ router.get("/", (req, res) => res.send("im here"));
 
 
 /**
+ * This path returns 3 random preview recipes
+ */
+ router.get("/random", async (req, res, next) => {
+  try {
+    let random_recipes = await recipes_utils.getThreeRandomRecipes();
+    res.send(random_recipes);
+  } catch (error) {
+    next(error);
+  }
+});
+
+/**
  * This path returns a full details of a recipe by its id
  */
 router.get("/:recipeId", async (req, res, next) => {
@@ -16,5 +28,7 @@ router.get("/:recipeId", async (req, res, next) => {
     next(error);
   }
 });
+
+
 
 module.exports = router;
